force-app/main/default/objects/Itinerary__c/Itinerary__c.object-meta.xml
<CustomObject>
    <label>Itinerary</label>
    <nameField>
        <label>Itinerary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itineraries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>