force-app/main/default/objects/Itinerary__c/fields/Itinerary_Overview__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Overview__c</fullName>
    <label>Itinerary Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>