force-app/main/default/objects/Itinerary__c/fields/Meal_Information__c.field-meta.xml
<CustomField>
    <fullName>Meal_Information__c</fullName>
    <label>Meal Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>