force-app/main/default/objects/Itinerary__c/fields/Meal_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Meal_Requirement__c</fullName>
    <label>Meal Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Veg</fullName>
            </value>
            <value>
                <fullName>No-Veg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>