force-app/main/default/objects/Itinerary__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>