force-app/main/default/objects/Itinerary__c/fields/Walking_Info__c.field-meta.xml
<CustomField>
    <fullName>Walking_Info__c</fullName>
    <label>Walking Info</label>
    <type>TextArea</type>
</CustomField>